Fix error display style in guest.css to ensure proper visibility

--- a/assets/css/guest.css
+++ b/assets/css/guest.css
@@ -115,7 +115,7 @@ h1 {
 }
 
 .error{
-  displayrgba(255, 0, 0, 0.63);
+  display: block;
   color: rgba(255, 0, 0, 0.671);
   font-size: .85rem;
 }
